Working on xss protection. Prepared redirections to error templates.

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -113,6 +113,21 @@
             <artifactId>byte-buddy</artifactId>
             <version>1.8.13</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
+            <artifactId>owasp-java-html-sanitizer</artifactId>
+            <version>20180219.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.owasp.encoder</groupId>
+            <artifactId>encoder</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.owasp.encoder</groupId>
+            <artifactId>encoder-jsp</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
